--- a/src/Web/ClientApp/src/app/home/home.component.html
+++ b/src/Web/ClientApp/src/app/home/home.component.html
@@ -12,3 +12,9 @@
   <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
 </ul>
 <p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
+
+<h2>Try</h2>
+<input value="Staff@g1.com" disabled /><br />
+<input value="Manager@g1.com" disabled /><br />
+<input value="Administrator@g1.com" disabled /><br />
+<input value="Super@g1.com" disabled />
