--- a/src/Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3">
         <div class="container">
             <a class="navbar-brand" [routerLink]="['/']">CleanArchitecture.Web</a>
             <button class="navbar-toggler"
@@ -17,39 +17,39 @@
                     <li class="nav-item"
                         [routerLinkActive]="['link-active']"
                         [routerLinkActiveOptions]="{ exact: true }">
-                        <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+                        <a class="nav-link text-light" [routerLink]="['/']">Home</a>
                     </li>
                     <!--
     <li class="nav-item" [routerLinkActive]="['link-active']">
-        <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
+        <a class="nav-link text-light" [routerLink]="['/counter']">Counter</a>
     </li> -->
                     <!--
     <li class="nav-item" [routerLinkActive]="['link-active']">
-      <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
+      <a class="nav-link text-light" [routerLink]="['/fetch-data']">Fetch data</a>
     </li> -->
                     <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/todo']">Todo</a>
+                        <a class="nav-link text-light" [routerLink]="['/todo']">Todo</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/order']">Orders</a>
+                        <a class="nav-link text-light" [routerLink]="['/order']">Orders</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/product']">Products</a>
+                        <a class="nav-link text-light" [routerLink]="['/product']">Products</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/tenant']">Tenants</a>
+                        <a class="nav-link text-light" [routerLink]="['/tenant']">Tenants</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/user']">Users</a>
+                        <a class="nav-link text-light" [routerLink]="['/user']">Users</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-dark" [routerLink]="['/me']">WhoAmI</a>
+                        <a class="nav-link text-light" [routerLink]="['/me']">WhoAmI</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="/api" target="_blank">API</a>
+                        <a class="nav-link text-light" href="/api" target="_blank">API</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="/Identity/Account/Manage">Account</a>
+                        <a class="nav-link text-light" href="/Identity/Account/Manage">Account</a>
                     </li>
                 </ul>
             </div>
