--- a/src/Web/ClientApp/src/app/me/me.component.html
+++ b/src/Web/ClientApp/src/app/me/me.component.html
@@ -10,7 +10,7 @@
     <dt class="col-sm-2">DataKey</dt>
     <dd class="col-sm-10">{{ me.dataKey }}</dd>
     <dt class="col-sm-2">Tenant</dt>
-    <dd class="col-sm-10">{{ me.tenant.tenantFullName }}</dd>
+    <dd class="col-sm-10">{{ me.tenant?.tenantFullName }}</dd>
     <dt class="col-sm-2">UserId</dt>
     <dd class="col-sm-10">{{ me.userId}}</dd>
 </dl>
