--- a/src/Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -24,16 +24,19 @@
                         <a class="nav-link text-light" [routerLink]="['/demo']">Create Demo</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
+                        <a class="nav-link text-light" [routerLink]="['/tenant']">Tenants</a>
+                    </li>
+                    <li class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-light" [routerLink]="['/order']">Orders</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-light" [routerLink]="['/product']">Products</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-light" [routerLink]="['/tenant']">Tenants</a>
+                        <a class="nav-link text-light" [routerLink]="['/user']">Users</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
-                        <a class="nav-link text-light" [routerLink]="['/user']">Users</a>
+                        <a class="nav-link text-light" [routerLink]="['/invite']">Invite</a>
                     </li>
                     <li class="nav-item" [routerLinkActive]="['link-active']">
                         <a class="nav-link text-light" [routerLink]="['/me']">WhoAmI</a>
